[tool.poetry]
name = "converter"
version = "0.1.0"
description = ""
authors = ["Simone Poggiali <gibbok.coding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
